--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p>weather data from <a href="https://openweathermap.org" style="color: white;">OpenWeather</a></p>
             </div>
         </div>
-        <img src="images/sunny.jpg" style="width: 100%; height: 100%; z-index: -2; position:fixed; top: 0; left: 0;" id="background-image" alt="">
+        <img src="./images/sunny.jpg" style="width: 100%; height: 100%; z-index: -2; position:fixed; top: 0; left: 0;" id="background-image" alt="">
     </main>
     <script src="index.js"></script>
 </body>
